<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".AddGameActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="30dp"
                android:elevation="15dp"
                android:textStyle="bold"
                android:textSize="25sp"
                android:text="@string/ingrese_un_nuevo_juego"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxStrokeColor="@color/black"
                app:boxBackgroundMode="outline"
                app:boxStrokeErrorColor="@android:color/holo_red_dark"
                app:boxBackgroundColor="#EDEDED"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/box_shadow"
                    android:autofillHints="name"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_baseline_games_24"
                    android:textColorHint="@color/black"
                    android:hint="@string/nombre"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxStrokeColor="@color/black"
                android:layout_marginTop="20dp"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="#EDEDED"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/etCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/box_shadow"
                    android:drawableStart="@drawable/ic_baseline_business_24"
                    android:autofillHints="name"
                    android:drawablePadding="10dp"
                    android:textColorHint="@color/black"
                    android:hint="@string/compa_a"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:popupBackground="#DF72BCEC"
                android:gravity="center"
                style="@style/spinner_style"
                android:entries="@array/arrayCategory"
                android:overScrollMode="ifContentScrolls" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxStrokeColor="@color/black"
                android:layout_marginTop="20dp"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="#EDEDED"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/etImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/box_shadow"
                    android:autofillHints="name"
                    android:drawableStart="@drawable/ic_twotone_insert_link_24"
                    android:drawablePadding="10dp"
                    android:textColorHint="@color/black"
                    android:hint="@string/url_image"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:boxStrokeColor="@color/black"
                android:textAlignment="viewStart"
                android:layout_marginTop="20dp"
                app:boxBackgroundMode="outline"
                app:boxBackgroundColor="#EDEDED"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:textAlignment="viewStart"
                    android:scrollbars="vertical"
                    android:lines="10"
                    android:drawableStart="@drawable/ic_twotone_insert_comment_24"
                    android:drawablePadding="10dp"
                    android:background="@drawable/box_shadow"
                    android:textColorHint="@color/black"
                    android:hint="@string/descripci_n"
                    android:inputType="textMultiLine"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="40dp"
                android:text="@string/guardar"
                android:background="@drawable/button_shadow"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>